# automate-email

./: README.md  pyproject.toml
automate_email/: __main__.py
